Eliminated top level modules.

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -298,7 +298,7 @@
           <linkXRef>false</linkXRef>
           <printFailingErrors>true</printFailingErrors>
           <rulesets>
-            <ruleset>${project.basedir}/../../pmd-ruleset.xml</ruleset>
+            <ruleset>${project.basedir}/../pmd-ruleset.xml</ruleset>
           </rulesets>
         </configuration>
         <executions>
