--- a/membership/pom.xml
+++ b/membership/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.github</groupId>
     <artifactId>sample-blog-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <relativePath>../../parent</relativePath>
+    <relativePath>../parent</relativePath>
   </parent>
 
   <artifactId>sample-blog-membership</artifactId>
