--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,11 @@
 
   <modules>
     <module>parent</module>
-    <module>modules</module>
+    <module>shared</module>
+    <module>membership</module>
+    <module>posts</module>
+    <module>app</module>
+    <module>aws</module>
   </modules>
 
 </project>
