--- a/posts/pom.xml
+++ b/posts/pom.xml
@@ -7,16 +7,18 @@
     <groupId>com.github</groupId>
     <artifactId>sample-blog-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <relativePath>../../parent</relativePath>
+    <relativePath>../parent</relativePath>
   </parent>
 
-  <artifactId>sample-blog-shared</artifactId>
+  <artifactId>sample-blog-posts</artifactId>
 
   <dependencies>
     <dependency>
-      <groupId>javax.validation</groupId>
-      <artifactId>validation-api</artifactId>
+      <groupId>com.github</groupId>
+      <artifactId>sample-blog-shared</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <!-- Test scope dependencies start here. -->
   </dependencies>
+
 </project>
