--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -7,18 +7,16 @@
     <groupId>com.github</groupId>
     <artifactId>sample-blog-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <relativePath>../../parent</relativePath>
+    <relativePath>../parent</relativePath>
   </parent>
 
-  <artifactId>sample-blog-posts</artifactId>
+  <artifactId>sample-blog-shared</artifactId>
 
   <dependencies>
     <dependency>
-      <groupId>com.github</groupId>
-      <artifactId>sample-blog-shared</artifactId>
-      <version>${project.version}</version>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
     </dependency>
     <!-- Test scope dependencies start here. -->
   </dependencies>
-
 </project>
