Improved length annotation validator.

--- a/sample-blog-shared/src/main/resources/ValidationMessages.properties
+++ b/sample-blog-shared/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,5 @@
-com.github.blog.shared.validator.constraints.Length.message=The length must fall within the range {min} - {max} characters.
-com.github.blog.shared.validator.constraints.Length.messageRequired=Required field cannot be left blank.
+com.github.blog.shared.validator.constraints.required=Required field cannot be left blank.
+com.github.blog.shared.validator.constraints.length.range=The length must fall within the range {min} - {max} characters.
+com.github.blog.shared.validator.constraints.length.min=Required to be a minimum of {min} characters in length.
+com.github.blog.shared.validator.constraints.length.max=Exceeds maximum length of {max}.
+com.github.blog.shared.validator.constraints.length.exact=The length must be exactly {min} characters.
