--- a/sample-blog-shared/pom.xml
+++ b/sample-blog-shared/pom.xml
@@ -18,5 +18,15 @@
       <artifactId>validation-api</artifactId>
     </dependency>
     <!-- Test scope dependencies start here. -->
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
