--- a/sample-blog-membership/pom.xml
+++ b/sample-blog-membership/pom.xml
@@ -32,7 +32,7 @@
     </dependency>
     <!-- Test scope dependencies start here. -->
     <dependency>
-      <groupId>org.hibernate</groupId>
+      <groupId>org.hibernate.validator</groupId>
       <artifactId>hibernate-validator</artifactId>
       <scope>test</scope>
     </dependency>
@@ -73,7 +73,7 @@
             <configuration>
               <rules>
                 <restrictImports
-                    implementation="de.skuzzle.enforcer.restrictimports.RestrictImports">
+                    implementation="de.skuzzle.enforcer.restrictimports.rule.RestrictImports">
                   <basePackage>
                     com.github.blog.membership.core.**
                   </basePackage>
