--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -39,7 +39,7 @@
     <mockito.version>2.24.5</mockito.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <slf4j.api.version>1.7.26</slf4j.api.version>
-    <spring.boot.version>1.5.19.RELEASE</spring.boot.version>
+    <spring.boot.version>2.1.3.RELEASE</spring.boot.version>
     <testng.version>7.0.0-beta3</testng.version>
     <validation.api.version>2.0.1.Final</validation.api.version>
   </properties>
@@ -235,6 +235,11 @@
         <plugin>
           <artifactId>maven-site-plugin</artifactId>
           <version>${maven.site.plugin}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-maven-plugin</artifactId>
+          <version>${spring.boot.version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
