Minor cleanup in pom files.

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -12,30 +12,18 @@
   <properties>
     <aws.lambda.java.core.version>1.2.0</aws.lambda.java.core.version>
     <ch.qos.logback.version>1.2.3</ch.qos.logback.version>
-    <hibernate.validator.version>6.0.7.Final</hibernate.validator.version>
+    <hibernate.validator.version>6.1.0.Alpha3</hibernate.validator.version>
     <java.version>1.8</java.version>
     <javax.el.api.version>3.0.1-b06</javax.el.api.version>
     <javax.el.version>2.2.6</javax.el.version>
-    <maven.assembly.plugin>3.0.0</maven.assembly.plugin>
     <maven.checkstyle.plugin>2.17</maven.checkstyle.plugin>
-    <maven.clean.plugin>3.0.0</maven.clean.plugin>
     <maven.compiler.plugin>3.6.1</maven.compiler.plugin>
-    <maven.dependency.plugin>3.0.1</maven.dependency.plugin>
-    <maven.deploy.plugin>2.8.2</maven.deploy.plugin>
     <maven.enforcer.plugin>1.4.1</maven.enforcer.plugin>
-    <maven.failsafe.plugin>2.20</maven.failsafe.plugin>
-    <maven.help.plugin>2.2</maven.help.plugin>
-    <maven.install.plugin>2.5.2</maven.install.plugin>
-    <maven.jar.plugin>3.0.2</maven.jar.plugin>
     <maven.pmd.plugin>3.8</maven.pmd.plugin>
-    <maven.release.plugin>2.5.3</maven.release.plugin>
     <maven.resources.plugin>3.1.0</maven.resources.plugin>
     <maven.restrict.imports.plugin>0.17.0</maven.restrict.imports.plugin>
     <maven.shade.plugin>3.2.1</maven.shade.plugin>
-    <maven.site.plugin>3.7.1</maven.site.plugin>
-    <maven.source.plugin>3.0.1</maven.source.plugin>
     <maven.surefire.plugin>3.0.0-M3</maven.surefire.plugin>
-    <maven.versions.plugin>2.2</maven.versions.plugin>
     <mockito.version>2.24.5</mockito.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <slf4j.api.version>1.7.26</slf4j.api.version>
@@ -118,18 +106,6 @@
     <pluginManagement>
       <plugins>
         <plugin>
-          <artifactId>maven-assembly-plugin</artifactId>
-          <version>${maven.assembly.plugin}</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>${maven.clean.plugin}</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <version>${maven.dependency.plugin}</version>
-        </plugin>
-        <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${maven.compiler.plugin}</version>
           <configuration>
@@ -138,13 +114,8 @@
           </configuration>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
           <version>${maven.shade.plugin}</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-release-plugin</artifactId>
-          <version>${maven.release.plugin}</version>
         </plugin>
         <plugin>
           <artifactId>maven-pmd-plugin</artifactId>
@@ -152,10 +123,6 @@
           <configuration>
             <targetJdk>${java.version}</targetJdk>
           </configuration>
-        </plugin>
-        <plugin>
-          <artifactId>maven-source-plugin</artifactId>
-          <version>${maven.source.plugin}</version>
         </plugin>
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
@@ -179,18 +146,6 @@
               <exclude>**/Abstract*.java</exclude>
             </excludes>
           </configuration>
-        </plugin>
-        <plugin>
-          <artifactId>maven-help-plugin</artifactId>
-          <version>${maven.help.plugin}</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>${maven.jar.plugin}</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-failsafe-plugin</artifactId>
-          <version>${maven.failsafe.plugin}</version>
         </plugin>
         <plugin>
           <artifactId>maven-enforcer-plugin</artifactId>
@@ -220,21 +175,8 @@
           </executions>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
           <version>${maven.checkstyle.plugin}</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>${maven.deploy.plugin}</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>${maven.install.plugin}</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>${maven.site.plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.springframework.boot</groupId>
@@ -244,39 +186,6 @@
       </plugins>
     </pluginManagement>
     <plugins>
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-clean-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-dependency-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-failsafe-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-help-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-jar-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-release-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-resources-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-source-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-      </plugin>
       <plugin>
         <artifactId>maven-checkstyle-plugin</artifactId>
         <configuration>
@@ -295,7 +204,6 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pmd-plugin</artifactId>
         <configuration>
           <targetJdk>${java.version}</targetJdk>
