--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -16,15 +16,15 @@
     <java.version>1.8</java.version>
     <javax.el.api.version>3.0.1-b06</javax.el.api.version>
     <javax.el.version>2.2.6</javax.el.version>
-    <maven.checkstyle.plugin>2.17</maven.checkstyle.plugin>
-    <maven.compiler.plugin>3.6.1</maven.compiler.plugin>
-    <maven.enforcer.plugin>1.4.1</maven.enforcer.plugin>
+    <maven.checkstyle.plugin>3.0.0</maven.checkstyle.plugin>
+    <maven.compiler.plugin>3.8.0</maven.compiler.plugin>
+    <maven.enforcer.plugin>3.0.0-M2</maven.enforcer.plugin>
     <maven.pmd.plugin>3.8</maven.pmd.plugin>
     <maven.resources.plugin>3.1.0</maven.resources.plugin>
     <maven.restrict.imports.plugin>0.17.0</maven.restrict.imports.plugin>
     <maven.shade.plugin>3.2.1</maven.shade.plugin>
     <maven.surefire.plugin>3.0.0-M3</maven.surefire.plugin>
-    <mockito.version>2.24.5</mockito.version>
+    <mockito.version>2.25.0</mockito.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <slf4j.api.version>1.7.26</slf4j.api.version>
     <spring.boot.version>2.1.3.RELEASE</spring.boot.version>
