--- a/sample-blog-app/pom.xml
+++ b/sample-blog-app/pom.xml
@@ -42,6 +42,16 @@
       <version>${project.version}</version>
     </dependency>
     <!-- Test scope dependencies start here. -->
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
