Added resource not found error handler.

--- a/sample-blog-app/src/main/resources/application.yaml
+++ b/sample-blog-app/src/main/resources/application.yaml
@@ -5,6 +5,10 @@ server:
 spring:
   main:
     banner-mode: 'off'
+  mvc:
+    throw-exception-if-no-handler-found: true
+  resources:
+    add-mappings: false
 logging:
   level:
     org.springframework: WARN
