--- a/sample-blog-membership/pom.xml
+++ b/sample-blog-membership/pom.xml
@@ -26,6 +26,14 @@
       <artifactId>jackson-databind</artifactId>
     </dependency>
     <dependency>
+      <groupId>commons-dbutils</groupId>
+      <artifactId>commons-dbutils</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.github</groupId>
       <artifactId>sample-blog-shared</artifactId>
       <version>${project.version}</version>
