--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -13,6 +13,7 @@
     <aws.lambda.java.core.version>1.2.0</aws.lambda.java.core.version>
     <ch.qos.logback.version>1.2.3</ch.qos.logback.version>
     <commons.dbutils.version>1.7</commons.dbutils.version>
+    <h2.version>1.4.198</h2.version>
     <hibernate.validator.version>6.1.0.Alpha3</hibernate.validator.version>
     <java.version>1.8</java.version>
     <javax.el.api.version>3.0.1-b06</javax.el.api.version>
@@ -85,6 +86,11 @@
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
         <version>${mysql.connector.java.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>${h2.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework.boot</groupId>
