--- a/sample-blog-shared/pom.xml
+++ b/sample-blog-shared/pom.xml
@@ -19,6 +19,16 @@
     </dependency>
     <!-- Test scope dependencies start here. -->
     <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish</groupId>
+      <artifactId>javax.el</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <scope>test</scope>
