--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -11,26 +11,26 @@
 
   <properties>
     <aws.lambda.java.core.version>1.2.0</aws.lambda.java.core.version>
-    <ch.qos.logback.version>1.2.3</ch.qos.logback.version>
+    <ch.qos.logback.version>1.3.0-alpha4</ch.qos.logback.version>
     <commons.dbutils.version>1.7</commons.dbutils.version>
-    <h2.version>1.4.198</h2.version>
-    <hibernate.validator.version>6.1.0.Alpha3</hibernate.validator.version>
+    <h2.version>1.4.199</h2.version>
+    <hibernate.validator.version>6.1.0.Alpha4</hibernate.validator.version>
     <java.version>1.8</java.version>
     <javax.el.api.version>3.0.1-b06</javax.el.api.version>
     <javax.el.version>2.2.6</javax.el.version>
-    <maven.checkstyle.plugin>3.0.0</maven.checkstyle.plugin>
-    <maven.compiler.plugin>3.8.0</maven.compiler.plugin>
+    <maven.checkstyle.plugin>3.1.0</maven.checkstyle.plugin>
+    <maven.compiler.plugin>3.8.1</maven.compiler.plugin>
     <maven.enforcer.plugin>3.0.0-M2</maven.enforcer.plugin>
-    <maven.pmd.plugin>3.11.0</maven.pmd.plugin>
+    <maven.pmd.plugin>3.12.0</maven.pmd.plugin>
     <maven.resources.plugin>3.1.0</maven.resources.plugin>
-    <maven.restrict.imports.plugin>0.17.0</maven.restrict.imports.plugin>
+    <maven.restrict.imports.plugin>1.0.0</maven.restrict.imports.plugin>
     <maven.shade.plugin>3.2.1</maven.shade.plugin>
     <maven.surefire.plugin>3.0.0-M3</maven.surefire.plugin>
-    <mockito.version>2.25.0</mockito.version>
-    <mysql.connector.java.version>8.0.15</mysql.connector.java.version>
+    <mockito.version>2.28.2</mockito.version>
+    <mysql.connector.java.version>8.0.16</mysql.connector.java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <slf4j.api.version>1.7.26</slf4j.api.version>
-    <spring.boot.version>2.1.3.RELEASE</spring.boot.version>
+    <slf4j.api.version>1.8.0-beta4</slf4j.api.version>
+    <spring.boot.version>2.1.5.RELEASE</spring.boot.version>
     <testng.version>7.0.0-beta3</testng.version>
     <validation.api.version>2.0.1.Final</validation.api.version>
   </properties>
