--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -11,10 +11,11 @@
 
   <properties>
     <aws.lambda.java.core.version>1.2.0</aws.lambda.java.core.version>
-    <ch.qos.logback.version>1.3.0-alpha4</ch.qos.logback.version>
+    <ch.qos.logback.version>1.2.3</ch.qos.logback.version>
     <commons.dbutils.version>1.7</commons.dbutils.version>
     <h2.version>1.4.199</h2.version>
     <hibernate.validator.version>6.1.0.Alpha4</hibernate.validator.version>
+    <jansi.version>1.18</jansi.version>
     <java.version>1.8</java.version>
     <javax.el.api.version>3.0.1-b06</javax.el.api.version>
     <javax.el.version>2.2.6</javax.el.version>
@@ -29,7 +30,7 @@
     <mockito.version>2.28.2</mockito.version>
     <mysql.connector.java.version>8.0.16</mysql.connector.java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <slf4j.api.version>1.8.0-beta4</slf4j.api.version>
+    <slf4j.api.version>1.7.26</slf4j.api.version>
     <spring.boot.version>2.1.5.RELEASE</spring.boot.version>
     <testng.version>7.0.0-beta3</testng.version>
     <validation.api.version>2.0.1.Final</validation.api.version>
@@ -98,6 +99,11 @@
         <type>pom</type>
         <version>${spring.boot.version}</version>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.fusesource.jansi</groupId>
+        <artifactId>jansi</artifactId>
+        <version>${jansi.version}</version>
       </dependency>
       <dependency>
         <groupId>com.amazonaws</groupId>
