--- a/sample-blog-app/pom.xml
+++ b/sample-blog-app/pom.xml
@@ -32,6 +32,10 @@
       <artifactId>spring-boot-starter-undertow</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.fusesource.jansi</groupId>
+      <artifactId>jansi</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.github</groupId>
       <artifactId>sample-blog-membership</artifactId>
       <version>${project.version}</version>
