--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -24,15 +24,15 @@
     <maven.enforcer.plugin>3.0.0-M2</maven.enforcer.plugin>
     <maven.pmd.plugin>3.12.0</maven.pmd.plugin>
     <maven.resources.plugin>3.1.0</maven.resources.plugin>
-    <maven.restrict.imports.plugin>1.0.0</maven.restrict.imports.plugin>
+    <maven.restrict.imports.plugin>1.0.1</maven.restrict.imports.plugin>
     <maven.shade.plugin>3.2.1</maven.shade.plugin>
     <maven.surefire.plugin>3.0.0-M3</maven.surefire.plugin>
     <mockito.version>3.0.0</mockito.version>
     <mysql.connector.java.version>8.0.17</mysql.connector.java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <slf4j.api.version>1.7.26</slf4j.api.version>
-    <spring.boot.version>2.1.6.RELEASE</spring.boot.version>
-    <testng.version>7.0.0-beta7</testng.version>
+    <slf4j.api.version>1.7.28</slf4j.api.version>
+    <spring.boot.version>2.1.8.RELEASE</spring.boot.version>
+    <testng.version>7.0.0</testng.version>
     <validation.api.version>2.0.1.Final</validation.api.version>
   </properties>
 
