--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -15,23 +15,23 @@
     <commons.dbutils.version>1.7</commons.dbutils.version>
     <h2.version>1.4.200</h2.version>
     <hibernate.validator.version>6.1.6.Final</hibernate.validator.version>
-    <jansi.version>2.0.1</jansi.version>
+    <jansi.version>2.1.1</jansi.version>
     <java.version>1.8</java.version>
     <javax.el.api.version>3.0.1-b06</javax.el.api.version>
     <javax.el.version>3.0.1-b12</javax.el.version>
     <maven.checkstyle.plugin>3.1.1</maven.checkstyle.plugin>
     <maven.compiler.plugin>3.8.1</maven.compiler.plugin>
     <maven.enforcer.plugin>3.0.0-M3</maven.enforcer.plugin>
-    <maven.pmd.plugin>3.13.0</maven.pmd.plugin>
+    <maven.pmd.plugin>3.14.0</maven.pmd.plugin>
     <maven.resources.plugin>3.2.0</maven.resources.plugin>
     <maven.restrict.imports.plugin>1.1.0</maven.restrict.imports.plugin>
     <maven.shade.plugin>3.2.4</maven.shade.plugin>
     <maven.surefire.plugin>3.0.0-M5</maven.surefire.plugin>
-    <mockito.version>3.6.0</mockito.version>
+    <mockito.version>3.7.0</mockito.version>
     <mysql.connector.java.version>8.0.22</mysql.connector.java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <slf4j.api.version>1.7.30</slf4j.api.version>
-    <spring.boot.version>2.3.5.RELEASE</spring.boot.version>
+    <spring.boot.version>2.4.1</spring.boot.version>
     <testng.version>7.3.0</testng.version>
     <validation.api.version>2.0.1.Final</validation.api.version>
   </properties>
