Updated to latest checkstyle version; introduced checkstyle suppressions.

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -12,6 +12,7 @@
   <properties>
     <aws.lambda.java.core.version>1.2.1</aws.lambda.java.core.version>
     <ch.qos.logback.version>1.2.3</ch.qos.logback.version>
+    <checkstyle.version>8.40</checkstyle.version>
     <commons.dbutils.version>1.7</commons.dbutils.version>
     <h2.version>1.4.200</h2.version>
     <hibernate.validator.version>6.1.6.Final</hibernate.validator.version>
@@ -217,6 +218,9 @@
           <consoleOutput>true</consoleOutput>
           <failsOnError>true</failsOnError>
           <violationSeverity>warning</violationSeverity>
+          <suppressionsLocation>
+            ${project.basedir}/../checkstyle-suppressions.xml
+          </suppressionsLocation>
         </configuration>
         <executions>
           <execution>
@@ -226,6 +230,13 @@
             </goals>
           </execution>
         </executions>
+        <dependencies>
+          <dependency>
+            <groupId>com.puppycrawl.tools</groupId>
+            <artifactId>checkstyle</artifactId>
+            <version>${checkstyle.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
       <plugin>
         <artifactId>maven-pmd-plugin</artifactId>
