--- a/sample-blog-aws/pom.xml
+++ b/sample-blog-aws/pom.xml
@@ -26,12 +26,12 @@
       <artifactId>hibernate-validator-annotation-processor</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.el</groupId>
-      <artifactId>javax.el-api</artifactId>
+      <groupId>jakarta.el</groupId>
+      <artifactId>jakarta.el-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.glassfish</groupId>
-      <artifactId>javax.el</artifactId>
+      <artifactId>jakarta.el</artifactId>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
