ci: migrated from adopt to temurin distribution for tests workflow.

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -23,6 +23,6 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           java-version: ${{ matrix.jdk }}
-          distribution: 'adopt'
+          distribution: 'temurin'
           cache: maven
       - run: mvn -T1C --batch-mode verify
