--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -13,30 +13,30 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>17</java.version>
 
-    <aws.lambda.java.core.version>1.2.2</aws.lambda.java.core.version>
-    <commons.dbutils.version>1.7</commons.dbutils.version>
+    <aws.lambda.java.core.version>1.2.3</aws.lambda.java.core.version>
+    <commons.dbutils.version>1.8.1</commons.dbutils.version>
     <glassfish.el.version>5.0.0-M1</glassfish.el.version>
-    <h2.version>2.1.214</h2.version>
-    <hibernate.validator.version>8.0.0.Final</hibernate.validator.version>
-    <jakarta.el.api.version>5.0.1</jakarta.el.api.version>
-    <jansi.version>2.4.0</jansi.version>
+    <h2.version>2.2.224</h2.version>
+    <hibernate.validator.version>8.0.1.Final</hibernate.validator.version>
+    <jakarta.el.api.version>6.0.0-M1</jakarta.el.api.version>
+    <jansi.version>2.4.1</jansi.version>
     <mysql.connector.java.version>8.0.33</mysql.connector.java.version>
-    <slf4j.api.version>2.0.7</slf4j.api.version>
-    <spring.boot.version>3.1.0</spring.boot.version>
-    <validation.api.version>3.0.2</validation.api.version>
+    <slf4j.api.version>2.1.0-alpha0</slf4j.api.version>
+    <spring.boot.version>3.2.1</spring.boot.version>
+    <validation.api.version>3.1.0-M1</validation.api.version>
 
-    <mockito.version>5.3.1</mockito.version>
-    <testng.version>7.8.0</testng.version>
+    <mockito.version>5.8.0</mockito.version>
+    <testng.version>7.9.0</testng.version>
 
-    <checkstyle.version>10.11.0</checkstyle.version>
-    <maven.checkstyle.plugin>3.3.0</maven.checkstyle.plugin>
-    <maven.compiler.plugin>3.11.0</maven.compiler.plugin>
-    <maven.enforcer.plugin>3.3.0</maven.enforcer.plugin>
-    <maven.pmd.plugin>3.21.0</maven.pmd.plugin>
+    <checkstyle.version>10.12.7</checkstyle.version>
+    <maven.checkstyle.plugin>3.3.1</maven.checkstyle.plugin>
+    <maven.compiler.plugin>3.12.1</maven.compiler.plugin>
+    <maven.enforcer.plugin>3.4.1</maven.enforcer.plugin>
+    <maven.pmd.plugin>3.21.2</maven.pmd.plugin>
     <maven.resources.plugin>3.3.1</maven.resources.plugin>
-    <maven.restrict.imports.plugin>2.2.0</maven.restrict.imports.plugin>
-    <maven.shade.plugin>3.4.1</maven.shade.plugin>
-    <maven.surefire.plugin>3.0.0</maven.surefire.plugin>
+    <maven.restrict.imports.plugin>2.4.0</maven.restrict.imports.plugin>
+    <maven.shade.plugin>3.5.1</maven.shade.plugin>
+    <maven.surefire.plugin>3.2.3</maven.surefire.plugin>
   </properties>
 
   <dependencyManagement>
