chore(deps): updated package dependencies.

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -18,24 +18,24 @@
     <glassfish.el.version>5.0.0-M1</glassfish.el.version>
     <h2.version>2.2.224</h2.version>
     <hibernate.validator.version>8.0.1.Final</hibernate.validator.version>
-    <jakarta.el.api.version>6.0.0-RC1</jakarta.el.api.version>
+    <jakarta.el.api.version>6.0.0</jakarta.el.api.version>
     <jansi.version>2.4.1</jansi.version>
     <mysql.connector.java.version>8.0.33</mysql.connector.java.version>
     <slf4j.api.version>2.1.0-alpha1</slf4j.api.version>
-    <spring.boot.version>3.2.4</spring.boot.version>
+    <spring.boot.version>3.2.5</spring.boot.version>
     <validation.api.version>3.1.0-M2</validation.api.version>
 
-    <mockito.version>5.11.0</mockito.version>
-    <testng.version>7.10.1</testng.version>
+    <mockito.version>5.12.0</mockito.version>
+    <testng.version>7.10.2</testng.version>
 
-    <checkstyle.version>10.15.0</checkstyle.version>
+    <checkstyle.version>10.16.0</checkstyle.version>
     <maven.checkstyle.plugin>3.3.1</maven.checkstyle.plugin>
     <maven.compiler.plugin>3.13.0</maven.compiler.plugin>
     <maven.enforcer.plugin>3.4.1</maven.enforcer.plugin>
-    <maven.pmd.plugin>3.21.2</maven.pmd.plugin>
+    <maven.pmd.plugin>3.22.0</maven.pmd.plugin>
     <maven.resources.plugin>3.3.1</maven.resources.plugin>
     <maven.restrict.imports.plugin>2.5.0</maven.restrict.imports.plugin>
-    <maven.shade.plugin>3.5.2</maven.shade.plugin>
+    <maven.shade.plugin>3.5.3</maven.shade.plugin>
     <maven.surefire.plugin>3.2.5</maven.surefire.plugin>
   </properties>
 
