--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -16,27 +16,27 @@
     <aws.lambda.java.core.version>1.2.3</aws.lambda.java.core.version>
     <commons.dbutils.version>1.8.1</commons.dbutils.version>
     <glassfish.el.version>5.0.0-M1</glassfish.el.version>
-    <h2.version>2.3.230</h2.version>
+    <h2.version>2.3.232</h2.version>
     <hibernate.validator.version>8.0.1.Final</hibernate.validator.version>
     <jakarta.el.api.version>6.0.1</jakarta.el.api.version>
     <jansi.version>2.4.1</jansi.version>
     <mysql.connector.java.version>8.0.33</mysql.connector.java.version>
     <slf4j.api.version>2.1.0-alpha1</slf4j.api.version>
-    <spring.boot.version>3.3.2</spring.boot.version>
+    <spring.boot.version>3.3.4</spring.boot.version>
     <validation.api.version>3.1.0</validation.api.version>
 
-    <mockito.version>5.12.0</mockito.version>
+    <mockito.version>5.14.1</mockito.version>
     <testng.version>7.10.2</testng.version>
 
-    <checkstyle.version>10.17.0</checkstyle.version>
-    <maven.checkstyle.plugin>3.4.0</maven.checkstyle.plugin>
+    <checkstyle.version>10.18.2</checkstyle.version>
+    <maven.checkstyle.plugin>3.5.0</maven.checkstyle.plugin>
     <maven.compiler.plugin>3.13.0</maven.compiler.plugin>
     <maven.enforcer.plugin>3.5.0</maven.enforcer.plugin>
-    <maven.pmd.plugin>3.24.0</maven.pmd.plugin>
+    <maven.pmd.plugin>3.25.0</maven.pmd.plugin>
     <maven.resources.plugin>3.3.1</maven.resources.plugin>
-    <maven.restrict.imports.plugin>2.5.0</maven.restrict.imports.plugin>
+    <maven.restrict.imports.plugin>2.6.0</maven.restrict.imports.plugin>
     <maven.shade.plugin>3.6.0</maven.shade.plugin>
-    <maven.surefire.plugin>3.3.1</maven.surefire.plugin>
+    <maven.surefire.plugin>3.5.0</maven.surefire.plugin>
   </properties>
 
   <dependencyManagement>
@@ -77,8 +77,8 @@
         <version>${commons.dbutils.version}</version>
       </dependency>
       <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
+        <groupId>com.mysql</groupId>
+        <artifactId>mysql-connector-j</artifactId>
         <version>${mysql.connector.java.version}</version>
       </dependency>
       <dependency>
