--- a/sample-blog-app/pom.xml
+++ b/sample-blog-app/pom.xml
@@ -44,6 +44,10 @@
       <artifactId>jansi</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.github</groupId>
       <artifactId>sample-blog-membership</artifactId>
       <version>${project.version}</version>
